apps/external-ingress/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-ingress
  labels:
    name: external-ingress
    app.kubernetes.io/name: external-ingress
    app.kubernetes.io/part-of: infrastructure
