apps/external-ingress/manifests/cockpit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cockpit
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 9090
    protocol: TCP
    targetPort: 9090
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cockpit
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.69
  ports:
  - name: app
    port: 9090
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockpit
  namespace: external-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serverstransport: cockpit-transport@kubernetescrd
spec:
  tls:
    - hosts:
        - nix.wrenspace.dev
      secretName: cockpit-tls
  rules:
    - host: nix.wrenspace.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockpit
                port:
                  number: 9090
