apps/external-ingress/manifests/gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 3000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gitea
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.200.52
  ports:
  - name: app
    port: 3000
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`git.wrenspace.dev`)
      services:
        - name: gitea
          port: 80
  tls:
    secretName: gitea
