apps/external-ingress/manifests/longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "longhorn"
    gethomepage.dev/description: "Storage management"
    gethomepage.dev/href: "https://longhorn.wrenspace.dev"
    gethomepage.dev/weight: "20"
spec:
  rules:
    - host: longhorn.wrenspace.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
  - hosts:
      - longhorn.wrenspace.dev
    secretName: longhorn
