apps/external-ingress/manifests/portainer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  rules:
    - host: portainer.wrenspace.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
  tls:
    - hosts:
        - portainer.wrenspace.dev
      secretName: portainer-tls
