apps/external-ingress/manifests/semaphore.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 3000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: semaphore
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.201
  ports:
  - name: app
    port: 3000
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ansible.wrenspace.dev`)
      services:
        - name: semaphore
          port: 80
  tls:
    secretName: semaphore-tls
