apps/external-ingress/manifests/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.wrenspace.dev`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
      - name: api@internal
        kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
