apps/external-ingress/manifests/vaultwarden.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vaultwarden
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.100.6
  ports:
  - name: app
    port: 8000
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-cors
  namespace: external-ingress
spec:
  headers:
    accessControlAllowOriginListRegex:
      - "^moz-extension://.*$"
      - "^chrome-extension://.*$"
      - "^safari-web-extension://.*$"
      - "^https://vault\\.wrenspace\\.dev$"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - PATCH
      - OPTIONS
    accessControlAllowHeaders:
      - Accept
      - Authorization
      - Content-Type
      - Device-Type
      - Bitwarden-Client-Name
      - Bitwarden-Client-Version
    accessControlAllowCredentials: true
    accessControlMaxAge: 600
    addVaryHeader: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: external-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: external-ingress-vaultwarden-cors@kubernetescrd
spec:
  tls:
    - hosts:
        - vault.wrenspace.dev
      secretName: vaultwarden
  rules:
    - host: vault.wrenspace.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
